refactor code, add RecurrenceBox and update